# relational-attention

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
configs/: rel_transformer_125m.yaml  rel_transformer_350m.yaml  std_transformer_125m.yaml  std_transformer_350m.yaml
papers/: conference_draft.md
relational_attention/: README.md  __init__.py  attention.py  layers.py  model.py
relational_attention/examples/: basic_usage.py
relational_attention/tests/: test_attention.py
scripts/: download_datasets.sh  evaluate.py  run_experiments.sh  setup_env.sh  train.py
