[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relational-attention"
version = "0.1.0"
description = "Attribute-Decomposed Attention: A Relational Inductive Bias for Structured Reasoning"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Mukhiddin Toshpulatov", email = "muhiddin1979@inha.edu"},
    {name = "Wookey Lee"},
    {name = "Youn-Kyoung Seo"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "attention",
    "transformer",
    "relational-algebra",
    "structured-reasoning",
    "text-to-sql",
    "deep-learning",
    "pytorch",
]
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
experiments = [
    "datasets>=2.14.0",
    "transformers>=4.35.0",
    "sentencepiece>=0.1.99",
    "sacrebleu>=2.3.1",
    "nltk>=3.8",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "tensorboard>=2.13.0",
    "wget>=3.2",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/muxiddin19/relational-attention"
Repository = "https://github.com/muxiddin19/relational-attention"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "emnlp26*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.venv
    | build
    | dist
    | emnlp26
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "build", "dist", "emnlp26"]

[tool.pytest.ini_options]
testpaths = ["relational_attention/tests"]
python_files = "test_*.py"
python_functions = "test_*"
